# Refrigerator-manager

./: .classpath  .project  1  AndroidManifest.xml  CODE_OF_CONDUCT.md  Calorie.cpp  README.md  Source.cpp  Weight.cpp  main.py
Final_edition/: CMakeList_foropencv.txt  CMakeLists.txt  readme.txt
Final_edition/Debug/: classification.py  train.py
Final_edition/RefrigeratorManager/: CMakeCache.txt  Calorie  Calorie.cpp  Makefile  README.md  Weight.cpp  a.out  classification.cpp  cmake_install.cmake  demo  result.txt
Final_edition/cppthread/: CMakeCache.txt  DemoThread.cpp  DemoThread.h  Makefile  cmake_install.cmake  demo  demo.cpp
Final_edition/test/: CMakeCache.txt  CMakeLists.txt  Makefile  demo  demo2
Project/: CMakeLists.txt  opencvtest.sln  readme.txt
project/: note
project/projectmain/: DemoTest.cpp  Source1.cpp  note  opencvtest.vcxproj  opencvtest.vcxproj.filters  readme.txt  result.txt
project/projectmain/x64/: Debug  note
project/projectmain/x64/Debug/: note  source.obj.enc  vc140.idb
project/projectmain/x64/Debug/opencvtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  note  opencvtest.lastbuildstate
project/x64/Debug/: note for image source  opencvtest.ilk  rename.py  train.py
res/layout/: activity_main.xml
res/menu/: main.xml
res/values/: strings.xml
src/com/example/mymanager/: DBUtils.java  MainActivity.java
test/: cmake_install.cmake  main.cpp  print.cpp  result.txt
